server/deployments/kubernetes/trello-deployment.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: trellodb
 name: trellodb
spec:
 ports:
  - port: 27017
    targetPort: 27017
 selector:
   name: trellodb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trellodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: trellodb
    spec:
      containers:
        - image: mongo
          name: trellodb
          imagePullPolicy: Always
          ports:
            - name: trellodb
              containerPort: 27017
          volumeMounts:
            - name: trellodbvol
              mountPath: /data/db
      volumes:
        - name: trellodbvol
---
apiVersion: v1
kind: Service
metadata:
  name: trellomicroservice
  labels:
    name: trellomicroservice
spec:
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    name: trellomicroservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trellomicroservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: trellomicroservice
  minReadySeconds: 10
  template:
    metadata:
      labels:
        name: trellomicroservice
        version: 3.0.0
    spec:
      containers:
        - name: trellomicroservice
          image: madmous/trellomicroservice:3.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
